log/build_2023-11-16_12-09-07/mypkg/stderr.log
  File "/home/ryousuke/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 1
    1 import rclpy                     #ROS 2のクライアントのためのライブラリ
      ^
SyntaxError: invalid syntax

